--- a/coffee_tasting/src/app/home/home.component.html
+++ b/coffee_tasting/src/app/home/home.component.html
@@ -1,1 +1,10 @@
 <p>home works!</p>
+<h2>{{helloWorld}}</h2>
+
+<h2>{{hero.name}}</h2>
+
+<div class="">
+  <span>id: </span>{{hero.id}}
+  <br>
+  <span>id: </span>{{hero.name | uppercase}}
+</div>
