Add superPower to the hero interface.

--- a/coffee_tasting/src/app/home/home.component.html
+++ b/coffee_tasting/src/app/home/home.component.html
@@ -6,5 +6,7 @@
 <div class="">
   <span>id: </span>{{hero.id}}
   <br>
-  <span>id: </span>{{hero.name | uppercase}}
+  <span>Name: </span>{{hero.name | uppercase}}
+  <br>
+  <span>Super Power: </span>{{hero.superPower}}
 </div>
